Finished some more sections

--- a/Homework/HW_1/mystyle.sty
+++ b/Homework/HW_1/mystyle.sty
@@ -3,5 +3,8 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{longtable}
+\usepackage{amsthm}
 \usepackage[margin=0.5in]{geometry} %used to set the margins
 \setcounter{secnumdepth}{0} %used to get rid of section numbers
+
+\renewcommand\qedsymbol{$\blacksquare$} %changes \end{proof} to a filled box
