--- a/Homework/HW_1/mystyle.sty
+++ b/Homework/HW_1/mystyle.sty
@@ -4,7 +4,11 @@
 \usepackage{amsmath}
 \usepackage{longtable}
 \usepackage{amsthm}
+\usepackage{graphicx}
+\graphicspath{ {./img/} }
 \usepackage[margin=0.5in]{geometry} %used to set the margins
 \setcounter{secnumdepth}{0} %used to get rid of section numbers
 
 \renewcommand\qedsymbol{$\blacksquare$} %changes \end{proof} to a filled box
+\newcommand{\answer}{\textbf{Answer:}} %saves some typing, SHould check for best practice
+\newcommand{\divides}{\mid}
