--- a/Homework/HW_1/tex/chapter_1.tex
+++ b/Homework/HW_1/tex/chapter_1.tex
@@ -10,7 +10,7 @@
 \item The moon is made of green cheese.
 \item 2n $\geq$ 100.
 \end{enumerate}
-\textbf{Answer:} c and e are both propositions, and both of their truth values are false.
+\answer c and e are both propositions, and both of their truth values are false.
 \item[4.]What is the negation of each of these propositions?
 \begin{enumerate}[a.]
     \item Jennifer and Teja are friends.
@@ -18,7 +18,7 @@
     \item Abby sent more than 100 text messages every day.
     \item 121 is a perfect square.
 \end{enumerate}
-\textbf{Answer:}
+\answer
 \begin{enumerate}[a.]
     \item Jennifer and Teja are not friends.
     \item There aren’t 13 items in a baker’s dozen.
@@ -34,7 +34,7 @@ its camera is 5 MP. Determine the truth value of each of these propositions.
     \item If Smartphone B has more RAM and more ROM than Smartphone C, then it also has a higher resolution camera.
     \item Smartphone A has more RAM than Smartphone B if and only if Smartphone B has more RAM than Smartphone A.
 \end{enumerate}
-\textbf{Answer:}
+\answer
 \begin{enumerate}[a.]
     \item True
     \item True
@@ -48,11 +48,11 @@ its camera is 5 MP. Determine the truth value of each of these propositions.
 \begin{itemize}
     \item [2.]You can see the movie only if you are over 18 years old or you have the permission of a parent. Express your answer in terms of m: “You can see the movie,” e: “You are over 18 years old,” and p: “You have the permission of a parent.”
 
-          \textbf{Answer:} $m \to (e \lor p)$
+          \answer $m \to (e \lor p)$
     \item[4.]To use the wireless network in the airport you must pay the daily fee unless you are a subscriber to the service. Express your answer in terms of w: “You can use the wire-
           less network in the airport,” d: “You pay the daily fee,” and s: “You are a subscriber to the service.”
 
-          \textbf{Answer:} $w \to (d \lor s)$
+          \answer $w \to (d \lor s)$
 \end{itemize}
 
 \subsection{1.3}
@@ -62,7 +62,7 @@ its camera is 5 MP. Determine the truth value of each of these propositions.
           \[
               \neg (p \land q) \equiv \neg p \lor \neg q
           \]
-          \textbf{Answer:}
+          \answer
           \begin{longtable}[c]{|l|l|l|l|l|l|}
               \hline
               \textit{p} & \textit{q} & $\neg p$ & $\neg q$ & $\neg (p \land q)$ & $\neg p \lor \neg q$ \\
@@ -84,7 +84,7 @@ its camera is 5 MP. Determine the truth value of each of these propositions.
               \item James is young and strong.
               \item Rita will move to Oregon or Washington.
           \end{enumerate}
-          \textbf{Answer:}
+          \answer
           \begin{enumerate}[a.]
               \item Kwame will not take a job in industry and not go to graduate school.
               \item Yoshiko doesn’t know Java or doesn’t know calculus.
@@ -98,7 +98,7 @@ its camera is 5 MP. Determine the truth value of each of these propositions.
               \item $[p \land (p \to q)] \to q$
               \item $[(p \lor q) \land (p \to r) \land (q \to r)] \to r$
           \end{enumerate}
-          \textbf{Answer:}
+          \answer
           \begin{enumerate}[a.]
               \item
                     \begin{tabular}{|l|l|l|l|l|l|}
@@ -183,7 +183,7 @@ its camera is 5 MP. Determine the truth value of each of these propositions.
               \item $[p \land (p \to q)] \to q$
               \item $[(p \lor q) \land (p \to r) \land (q \to r)] \to r$
           \end{enumerate}
-          \textbf{Answer:}
+          \answer
           \begin{enumerate}[a.]
               \item \begin{align*}
                         [\neg p \land (p \lor q)] \to q
@@ -262,7 +262,7 @@ quantifications in English.
 \item $\neg\forall xN(x)$
 \item $\forall x \neg N(x)$
 \end {enumerate}
-\textbf{Answer:}
+\answer
 \begin{enumerate}[a.]
     \item There exists a student in my school who has visited North Dakota.
     \item Every student in my school has visted North Dakota.
@@ -278,7 +278,7 @@ quantifications in English.
 \item $\exists x(R(x) \to H(x))$
 \item $\exists x(R(x) \land H(x))$
 \end{enumerate}
-\textbf{Answer:}
+\answer
 \begin{enumerate}[a.]
     \item Every rabbit hops.
     \item All animals are rabbits who hop.
@@ -309,7 +309,7 @@ quantifications in English.
               \item $\forall x \forall y ((((x \geq 0) \land y < 0)) \to (x - y > 0)$
               \item $\forall x \forall y \exists z (x = y + z)$
           \end{enumerate}
-          \textbf{Answer:}
+          \answer
           \begin{enumerate}[a.]
               \item There exists an $x$ such that for all $y$, $xy = y$, $x$ and $y$ are real.
               \item For all pairs of $x$ and $y$, both real, if $(x \geq 0)$ and $(y < 0)$, then $x - y > 0$.
@@ -328,7 +328,7 @@ quantifications in English.
               \item $\exists x \exists y \forall z ((x = y) \land (C(x, z) \to C(y, z)))$
               \item $\exists x \exists y \forall z ((x = y) \land (C(x, z) \leftrightarrow C(y, z)))$
           \end{enumerate}
-          \textbf{Answer:}
+          \answer
           \begin{enumerate}[a.]
               \item Randy Goldberg is enrolled in CS 252.
               \item There exists a student in my school that is enrolled in Math 695.
@@ -350,7 +350,7 @@ quantifications in English.
               \item No one can fool himself or herself.
               \item There is someone who can fool exactly one person besides himself or herself.
           \end{enumerate}
-          \textbf{Answer:}
+          \answer
           \begin{enumerate}[a.]
               \item $\forall xF(x, \text{Fred})$
               \item $\forall xF(\text{Evelyn}, x)$
@@ -388,7 +388,7 @@ quantifications in English.
               \item Steve will work at a computer company this summer. Therefore, this summer Steve will work at a computer company or he will be a beach bum.
               \item If I work all night on this homework, then I can answer all the exercises. If I answer all the exercises, I will understand the material. Therefore, if I work all night on this homework, then I will understand the material.
           \end{enumerate}
-          \textbf{Answer:}
+          \answer
           \begin{enumerate}[a.]
               \item Simplification
               \item Disjunctive syllogism
@@ -399,7 +399,7 @@ quantifications in English.
 
     \item[8] What rules of inference are used in this argument? “No man is an island. Manhattan is an island. Therefore, Manhattan is not a man.”
 
-          \textbf{Answer:} Modus ponens
+          \answer Modus ponens
 \end{itemize}
 
 \subsection{1.7}
