--- a/Homework/HW_1/homework_1.tex
+++ b/Homework/HW_1/homework_1.tex
@@ -7,5 +7,7 @@
 \begin{document}
 \maketitle
 \input{tex/chapter_1}
-
+\input{tex/chapter_2}
+\input{tex/chapter_3}
+\input{tex/chapter_4}
 \end{document}
