Made 4.3 #2 answer capitalized

--- a/Homework/HW_1/tex/chapter_4.tex
+++ b/Homework/HW_1/tex/chapter_4.tex
@@ -213,9 +213,9 @@
           \end{enumerate}
           \answer
           \begin{enumerate}[a.]
-              \item wxst tsppyxmsr
-              \item nojk kjggpodji
-              \item qhar rabbyhcaj
+              \item WXST TSPPYXMSR
+              \item NOJK KJGGPODJI
+              \item QHAR RABBYHCAJ
           \end{enumerate}
     \item[4.] Decrypt these messages that were encrypted using the Caesar cipher.
           \begin{enumerate}[a.]
