--- a/Homework/HW_1/tex/chapter_2.tex
+++ b/Homework/HW_1/tex/chapter_2.tex
@@ -6,6 +6,7 @@
             \item $\emptyset \in \{\emptyset\} $
             \item $\emptyset \in \{\emptyset, \{\emptyset \}\}$
             \item $\{\emptyset\} \in \{\emptyset \}$
+            \item $\{\emptyset\} \in \{\{\emptyset\}\}$
             \item $\{\emptyset\} \subset \{\emptyset, \{\emptyset\}\}$
             \item $\{\{\emptyset\}\} \subset \{\emptyset, \{\emptyset\}\}$
             \item $\{\{\emptyset\}\} \subset \{\{\emptyset\}, \{\emptyset\}\}$
